tests/ui/borrowck/issue-128381-mutate-through-option-inspect.stderr
error[E0594]: cannot assign to `a.a`, which is behind a `&` reference
  --> $DIR/issue-128381-mutate-through-option-inspect.rs:12:9
   |
LL |         a.a += 123;
   |         ^^^^^^^^^^ `a` is a `&` reference, so the data it refers to cannot be written

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
